--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "ejs": "^3.1.5",
     "express": "^4.15.2",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "got": "^11.3.0",
